
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<include-->
        <!--android:id="@+id/view_head_har"-->
        <!--layout="@layout/head_bar_main"/>-->

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </FrameLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0">
    </android.support.v4.view.ViewPager>

    <org.chuck.view.SyncHorizontalScrollView
        android:id="@+id/hsv_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </org.chuck.view.SyncHorizontalScrollView>

    <RadioGroup
        android:id="@+id/rg_main_tabbar"
        style="@style/XJFuPin.MainTabBar">

        <RadioButton
            android:id="@+id/rb_new_msg"
            style="@style/XJFuPin.MainTabBar.Button"
            android:button="@null"
            android:drawableTop="@drawable/selector_main_tabbar_news"
            android:drawablePadding="1dp"
            android:text="@string/main_new_msg"/>

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/XJFuPin.MainTabBar.Button"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/selector_main_tabbar_index"
            android:drawablePadding="1dp"
            android:text="@string/main_home"/>

        <RadioButton
            android:id="@+id/rb_profile"
            style="@style/XJFuPin.MainTabBar.Button"
            android:button="@null"
            android:drawableTop="@drawable/selector_main_tabbar_profile"
            android:drawablePadding="1dp"
            android:text="@string/main_profile"/>

        <RadioButton
            android:id="@+id/rb_about"
            style="@style/XJFuPin.MainTabBar.Button"
            android:button="@null"
            android:drawableTop="@drawable/selector_main_tabbar_about"
            android:drawablePadding="1dp"
            android:text="@string/main_about"/>
    </RadioGroup>
</LinearLayout>